<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogForgot"
    android:layout_margin="20dp"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dialogBox"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/about_us_border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/AboutUsTitle"
                android:background="@drawable/about_us_fill"
                android:padding="10dp"
                android:text="About Us"
                android:fontFamily="@font/poppinsmedium"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:drawableLeft="@drawable/informus"
                android:drawablePadding="8dp"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/description"
                android:text="@string/description_one"
                android:fontFamily="@font/poppinssemibold"
                android:textSize="18sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@+id/AboutUsTitle" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/description_two"
                android:text="@string/description_two"
                android:fontFamily="@font/poppinsmedium"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/description_three"
                android:text="@string/description_three"
                android:fontFamily="@font/poppinsmedium"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@+id/description_two" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/description_four"
                android:text="@string/description_four"
                android:fontFamily="@font/poppinssemibold"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@+id/description_three" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/description_five"
                android:text="@string/description_five"
                android:fontFamily="@font/poppinsmedium"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@+id/description_four" />


            <Button
                android:id="@+id/btnOk"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/ctz_fuchsia"
                android:fontFamily="@font/poppinsmedium"
                android:text="Pawsome!"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="@id/dialogBox"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_five"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>